--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ __pycache__
 api_keys.py
 models
 train_sk_model.ipynb
+docker-compose.yml
+server/DockerFile
+server/server.crt
+server/server.key
+server/server.env
+db/DockerFile
+client/DockerFile
+client/client.env
