--- a/client/DockerFile
+++ b/client/DockerFile
@@ -6,6 +6,7 @@ WORKDIR /client
 
 # Copy the current directory contents into the container at /app
 COPY . /client/
+COPY . /crts/server.crt 
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
