--- a/server/DockerFile
+++ b/server/DockerFile
@@ -6,8 +6,8 @@ WORKDIR /server
 
 # Copy the current directory contents into the container at /app
 COPY . /server/
-COPY server.crt /server.crt
-COPY server.key /server.key
+COPY server.crt crts/server.crt
+COPY server.key crts/server.key
 
 
 # Install any needed packages specified in requirements.txt
@@ -20,7 +20,6 @@ EXPOSE 3000
 ENV NAME SmartTraidserver
 ENV EXCHANGE_API_KEY = '85dce83d89dc8448c7bd4130'
 ENV file_system = False
-ENV DB_HOST = 
 ENV DB_PORT = 2701
 ENV DB_USER: root
 ENV DB_PASSWORD: te13@t$3t
