--- a/server/DockerFile
+++ b/server/DockerFile
@@ -1,32 +1,33 @@
 # Use an official Python runtime as a parent image
-FROM python:3.10.0
+FROM python:3.10-slim
 
 # Set the working directory in the container
-WORKDIR /server
+WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY . /server/
-COPY server.crt crts/server.crt
-COPY server.key crts/server.key
+COPY requairments.txt /app/requairments.txt
+COPY /crts /app/crts
+# COPY server/requairments.txt /app/requairments.txt
 
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip   
+RUN pip install --no-cache-dir -r requairments.txt
 
-# Make port 80 available to the world outside this container
+COPY . .
+# Make port 3000 available to the world outside this container
 EXPOSE 3000
 
-# Define environment variable
-ENV NAME SmartTraidserver
-ENV EXCHANGE_API_KEY = '85dce83d89dc8448c7bd4130'
-ENV file_system = False
-ENV DB_PORT = 2701
-ENV DB_USER: root
-ENV DB_PASSWORD: te13@t$3t
-ENV sender_email = 'youremail@gmail.com'
-ENV sender_password = 'yourpassword'
-ENV IP = 0
-ENV PORT = 9999
+# Define environment variables
+ENV DB_HOST=db \
+    DB_PORT=27017 \
+    DB_USER=root \
+    DB_PASSWORD=te13@t$3t \
+    DB_NAME=SmartTraidserver \
+    SENDER_EMAIL=youremail@gmail.com \
+    SENDER_PASSWORD=yourpassword \
+    FILE_SYSTEM=False \
+    EXCHANGE_API_KEY=85dce83d89dc8448c7bd4130
 
-# Run app.py when the container launches
-CMD ["python", "server.py", "9999", "--crt=server.crt", "--key= server.key"]
+# Run server.py when the container launches
+CMD ["python", "server.py", "9999", "--crt=crts/server.crt", "--key=crts/server.key"]
