--- a/client/DockerFile
+++ b/client/DockerFile
@@ -7,12 +7,12 @@ WORKDIR /app
 # Copy the requirements file and install Python dependencies
 COPY . . 
 COPY /crts/ /app/crts/
+COPY ./requairments.txt /app/requairments.txt
 # COPY ./client/requirements.txt /app/requirements.txt
-
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip 
+RUN pip install --no-cache-dir -r requairments.txt
 
 # Copy the rest of your app's source code from your host to your image filesystem.
-COPY ./client /app
 
 # Expose the port Streamlit runs on
 EXPOSE 8501
