--- a/client/DockerFile
+++ b/client/DockerFile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Copy the requirements file and install Python dependencies
 COPY . . 
-COPY /crts/ /app/crts/
+COPY /crts/ /app
 COPY ./requairments.txt /app/requairments.txt
 # COPY ./client/requirements.txt /app/requirements.txt
 RUN pip install --upgrade pip 
