--- a/server/DockerFile
+++ b/server/DockerFile
@@ -6,8 +6,8 @@ WORKDIR /app
 
 # Copy the current directory contents into the container at /app
 COPY requairments.txt /app/requairments.txt
-COPY /crts /app/crts
-# COPY server/requairments.txt /app/requairments.txt
+# COPY /certs /app/certs
+
 
 
 # Install any needed packages specified in requirements.txt
@@ -30,4 +30,4 @@ ENV DB_HOST=db \
     EXCHANGE_API_KEY=85dce83d89dc8448c7bd4130
 
 # Run server.py when the container launches
-CMD ["python", "server.py", "9999", "--crt=crts/server.csr", "--key=crts/server.key"]
+CMD ["python", "server.py"]
