--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,11 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile.server
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:3000 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - SmartTraid
     ports:
@@ -30,7 +35,8 @@ services:
   client:
     container_name: client
     depends_on:
-      - server
+      server:
+        condition: service_healthy
     build: 
       context: ./client
       dockerfile: Dockerfile.client
