--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       context: ./server
       dockerfile: Dockerfile.server
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:3000 || exit 1"]
+      test: ['CMD-SHELL', "curl -f localhost:3000 || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -31,6 +31,8 @@ services:
       - SmartTraid
     ports:
       - '3000:3000'
+    volumes:
+      - certs:/certs
 
   client:
     container_name: client
@@ -44,10 +46,14 @@ services:
       - SmartTraid
     ports:
       - '8501:8501'
+    volumes:
+      - certs:/certs
 
 volumes:
   mongodb_data:
     driver: local
+  certs:
+      driver: local
 networks:
   SmartTraid:
     driver: bridge
