--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,8 @@ services:
       - SmartTraid
     ports:
       - '3000:3000'
-    volumes:
-      - certs:/certs
+    # volumes:
+    #   - certs:/certs
 
   client:
     container_name: client
@@ -46,14 +46,14 @@ services:
       - SmartTraid
     ports:
       - '8501:8501'
-    volumes:
-      - certs:/certs
+    # volumes:
+    #   - certs:/certs
 
 volumes:
   mongodb_data:
     driver: local
-  certs:
-      driver: local
+  # certs:
+  #     driver: local
 networks:
   SmartTraid:
     driver: bridge
