--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       context: ./server
       dockerfile: Dockerfile.server
     healthcheck:
-      test: ['CMD-SHELL', "curl -f localhost:3000 || exit 1"]
+      test: ['CMD-SHELL', "nc -z localhost 3000 || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
