connects to server without ssl and has a problem getting a respnse from server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   db:
     image: mongo:4.4
-    container_name: db
+    container_name: mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: te13@t$3t
@@ -11,47 +11,51 @@ services:
     volumes:
       - mongodb_data:/data/db
     networks:
-      - SmartTraid
-        
+      SmartTraid:
+        ipv4_address: 172.18.0.2
     ports:
       - '27017:27017'
       
   server:
     container_name: server
+    links:
+      - db
     depends_on:
       - db
     build:
       context: ./server
       dockerfile: Dockerfile.server
-    healthcheck:
-      # test: ['CMD', 'nc', '-z', 'localhost', '3000']
-      test: ['CMD-SHELL', "curl -f https://server:3000 --cacert /certs/server.crt.pem || exit 1"]
-      # test: ['CMD-SHELL', "echo | openssl s_client -connect server:3000 -servername server -brief || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    networks:
-      - SmartTraid
+    # healthcheck:
+      # test: ['CMD-SHELL', "echo | openssl s_client -connect 172.18.0.3:3000 -servername localhost -CAfile /certs/server.crt.pem -verify_return_error -brief || exit 1"]
+      # interval: 10s
+      # timeout: 5s
+      # retries: 5
     ports:
       - '3000:3000'
     volumes:
       - certs:/certs
+    networks:
+      SmartTraid:
+        ipv4_address: 172.18.0.3
 
   client:
     container_name: client
-    depends_on:
-      server:
-        condition: service_healthy
+    links:
+      - server
+    # depends_on:
+      # server:
+        # condition: service_healthy
     build: 
       context: ./client
       dockerfile: Dockerfile.client
-    # healthcheck:
-    #   test: ['CMD-SHELL', "curl -f https://localhost:8501 --cacert /certs/server.crt.pem || exit 1"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 5
+    healthcheck:
+      test: ['CMD-SHELL', "curl -f client://client:8501 --cacert /certs/server.crt.pem || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
-      - SmartTraid
+      SmartTraid:
+        ipv4_address: 172.18.0.4  # Corrected IP address
     ports:
       - '8501:8501'
     volumes:
@@ -65,4 +69,7 @@ volumes:
 networks:
   SmartTraid:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.18.0.0/16 
   
